--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ As you read through this material you will encounter some numbered lines of R in
 <div class="example">
 <p><span id="exm:eg" class="example"><strong>Example 0.1 </strong></span>R stuff</p>
 </div>
-<p>We learn by doing. Run these instructions as you read through the following material.</p>
+<p>We learn by doing. Run these instructions as you read through the following material. If you want to <em>get it</em>, you have to <em>do it</em>.</p>
 
 </div>
             </section>
