--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-<meta name="date" content="2023-01-02" />
+<meta name="date" content="2023-01-03" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -218,7 +218,7 @@ div.csl-indent {
 <p class="author"><em><div class="line-block"> David Gerbing<br />
  The School of Business<br />
  Portland State University</div></em></p>
-<p class="date"><em>2023-01-02</em></p>
+<p class="date"><em>2023-01-03</em></p>
 </div>
 <div id="preface" class="section level1 unnumbered hasAnchor">
 <h1>Preface<a href="index.html#preface" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -228,7 +228,8 @@ As you read through this material you will encounter some numbered lines of R in
 <div class="example">
 <p><span id="exm:eg" class="example"><strong>Example 0.1 </strong></span>R stuff</p>
 </div>
-<p>We learn by doing. Run these instructions as you read through the following material. If you want to <em>get it</em>, you have to <em>do it</em>.</p>
+<p>We learn by doing. Run these instructions as you read through the following material and you will learn the basics of how data scientists do data science computations.</p>
+<p><span style="font-size: 1.2em;">↪</span> <span style="color:darkred;">If you want to <em>get it</em>, you have to <em>do it</em>.</span></p>
 
 </div>
             </section>
