--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ As you read through this material you will encounter some numbered lines of R in
 <p><span id="exm:eg" class="example"><strong>Example 0.1 </strong></span>R stuff</p>
 </div>
 <p>We learn by doing. Run these instructions as you read through the following material and you will learn the basics of how data scientists do data science computations.</p>
-<p><span style="font-size: 1.2em;">↪</span> <span style="color:darkred;">If you want to <em>get it</em>, you have to <em>do it</em>.</span></p>
+<p><span style="font-size: 1.44m;">↪</span> <span style="color:darkred; font-size: 1.2em;">If you want to <em>get it</em>, you have to <em>do it</em>.</span></p>
 <p> </p>
 <p><img src="images/DoDataScience.gif" width="60%" style="display: block; margin: auto;" /></p>
 
