--- a/index.html
+++ b/index.html
@@ -53,93 +53,7 @@
 <script src="libs/anchor-sections-1.1.0/anchor-sections.js"></script>
 
 
-<style type="text/css">
-pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
-pre > code.sourceCode > span:empty { height: 1.2em; }
-.sourceCode { overflow: visible; }
-code.sourceCode > span { color: inherit; text-decoration: inherit; }
-pre.sourceCode { margin: 0; }
-@media screen {
-div.sourceCode { overflow: auto; }
-}
-@media print {
-pre > code.sourceCode { white-space: pre-wrap; }
-pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
-}
-pre.numberSource code
-  { counter-reset: source-line 0; }
-pre.numberSource code > span
-  { position: relative; left: -4em; counter-increment: source-line; }
-pre.numberSource code > span > a:first-child::before
-  { content: counter(source-line);
-    position: relative; left: -1em; text-align: right; vertical-align: baseline;
-    border: none; display: inline-block;
-    -webkit-touch-callout: none; -webkit-user-select: none;
-    -khtml-user-select: none; -moz-user-select: none;
-    -ms-user-select: none; user-select: none;
-    padding: 0 4px; width: 4em;
-    color: #aaaaaa;
-  }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
-div.sourceCode
-  {   }
-@media screen {
-pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
-}
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { color: #008000; } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { color: #008000; font-weight: bold; } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
-</style>
 
-<style type="text/css">
-/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-}
-.hanging div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}
-</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -171,37 +85,31 @@ div.csl-indent {
 <li class="chapter" data-level="1.2.2" data-path="Rintro.html"><a href="Rintro.html#do-r-on-your-computer"><i class="fa fa-check"></i><b>1.2.2</b> Do R on Your Computer</a></li>
 <li class="chapter" data-level="1.2.3" data-path="Rintro.html"><a href="Rintro.html#lessR"><i class="fa fa-check"></i><b>1.2.3</b> Download and Access <code>lessR</code></a></li>
 </ul></li>
+<li class="chapter" data-level="1.3" data-path="Rintro.html"><a href="Rintro.html#data"><i class="fa fa-check"></i><b>1.3</b> Data</a>
+<ul>
+<li class="chapter" data-level="1.3.1" data-path="Rintro.html"><a href="Rintro.html#dt"><i class="fa fa-check"></i><b>1.3.1</b> Data Table</a></li>
+<li class="chapter" data-level="1.3.2" data-path="Rintro.html"><a href="Rintro.html#read"><i class="fa fa-check"></i><b>1.3.2</b> Read the Data into R</a></li>
+<li class="chapter" data-level="1.3.3" data-path="Rintro.html"><a href="Rintro.html#display-the-data"><i class="fa fa-check"></i><b>1.3.3</b> Display the Data</a></li>
+<li class="chapter" data-level="1.3.4" data-path="Rintro.html"><a href="Rintro.html#two-types-of-variables"><i class="fa fa-check"></i><b>1.3.4</b> Two Types of Variables</a></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html"><i class="fa fa-check"></i><b>2</b> Data Analysis with R</a>
+<li class="chapter" data-level="1.4" data-path="Rintro.html"><a href="Rintro.html#count"><i class="fa fa-check"></i><b>1.4</b> Visualize the Data</a>
 <ul>
-<li class="chapter" data-level="2.1" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#data"><i class="fa fa-check"></i><b>2.1</b> Data</a>
-<ul>
-<li class="chapter" data-level="2.1.1" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#dt"><i class="fa fa-check"></i><b>2.1.1</b> Data Table</a></li>
-<li class="chapter" data-level="2.1.2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#read"><i class="fa fa-check"></i><b>2.1.2</b> Read the Data into R</a></li>
-<li class="chapter" data-level="2.1.3" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#display-the-data"><i class="fa fa-check"></i><b>2.1.3</b> Display the Data</a></li>
-<li class="chapter" data-level="2.1.4" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#two-types-of-variables"><i class="fa fa-check"></i><b>2.1.4</b> Two Types of Variables</a></li>
+<li class="chapter" data-level="1.4.1" data-path="Rintro.html"><a href="Rintro.html#bar-chart-and-pie-chart"><i class="fa fa-check"></i><b>1.4.1</b> Bar Chart and Pie Chart</a></li>
+<li class="chapter" data-level="1.4.2" data-path="Rintro.html"><a href="Rintro.html#hist"><i class="fa fa-check"></i><b>1.4.2</b> Histogram</a></li>
+<li class="chapter" data-level="1.4.3" data-path="Rintro.html"><a href="Rintro.html#params"><i class="fa fa-check"></i><b>1.4.3</b> Parameter Values</a></li>
 </ul></li>
-<li class="chapter" data-level="2.2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#count"><i class="fa fa-check"></i><b>2.2</b> Visualize the Data</a>
+<li class="chapter" data-level="1.5" data-path="Rintro.html"><a href="Rintro.html#summary"><i class="fa fa-check"></i><b>1.5</b> Summary</a></li>
+<li class="chapter" data-level="1.6" data-path="Rintro.html"><a href="Rintro.html#report-generation"><i class="fa fa-check"></i><b>1.6</b> Report Generation</a>
 <ul>
-<li class="chapter" data-level="2.2.1" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#bar-chart-and-pie-chart"><i class="fa fa-check"></i><b>2.2.1</b> Bar Chart and Pie Chart</a></li>
-<li class="chapter" data-level="2.2.2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#hist"><i class="fa fa-check"></i><b>2.2.2</b> Histogram</a></li>
-<li class="chapter" data-level="2.2.3" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#params"><i class="fa fa-check"></i><b>2.2.3</b> Parameter Values</a></li>
+<li class="chapter" data-level="1.6.1" data-path="Rintro.html"><a href="Rintro.html#figures"><i class="fa fa-check"></i><b>1.6.1</b> Copy and Paste</a></li>
+<li class="chapter" data-level="1.6.2" data-path="Rintro.html"><a href="Rintro.html#compile-a-report"><i class="fa fa-check"></i><b>1.6.2</b> Compile a Report</a></li>
+<li class="chapter" data-level="1.6.3" data-path="Rintro.html"><a href="Rintro.html#report-from-r-markdown"><i class="fa fa-check"></i><b>1.6.3</b> Report from R Markdown</a></li>
 </ul></li>
-<li class="chapter" data-level="2.3" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#summary"><i class="fa fa-check"></i><b>2.3</b> Summary</a></li>
-</ul></li>
-<li class="chapter" data-level="3" data-path="more-stuff.html"><a href="more-stuff.html"><i class="fa fa-check"></i><b>3</b> More Stuff</a>
+<li class="chapter" data-level="1.7" data-path="Rintro.html"><a href="Rintro.html#miscellaneous"><i class="fa fa-check"></i><b>1.7</b> Miscellaneous</a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="more-stuff.html"><a href="more-stuff.html#report-generation"><i class="fa fa-check"></i><b>3.1</b> Report Generation</a>
-<ul>
-<li class="chapter" data-level="3.1.1" data-path="more-stuff.html"><a href="more-stuff.html#figures"><i class="fa fa-check"></i><b>3.1.1</b> Copy and Paste</a></li>
-<li class="chapter" data-level="3.1.2" data-path="more-stuff.html"><a href="more-stuff.html#compile-a-report"><i class="fa fa-check"></i><b>3.1.2</b> Compile a Report</a></li>
-<li class="chapter" data-level="3.1.3" data-path="more-stuff.html"><a href="more-stuff.html#report-from-r-markdown"><i class="fa fa-check"></i><b>3.1.3</b> Report from R Markdown</a></li>
-</ul></li>
-<li class="chapter" data-level="3.2" data-path="more-stuff.html"><a href="more-stuff.html#miscellaneous"><i class="fa fa-check"></i><b>3.2</b> Miscellaneous</a>
-<ul>
-<li class="chapter" data-level="3.2.1" data-path="more-stuff.html"><a href="more-stuff.html#vig"><i class="fa fa-check"></i><b>3.2.1</b> Get Help</a></li>
-<li class="chapter" data-level="3.2.2" data-path="more-stuff.html"><a href="more-stuff.html#comments"><i class="fa fa-check"></i><b>3.2.2</b> Comments</a></li>
-<li class="chapter" data-level="3.2.3" data-path="more-stuff.html"><a href="more-stuff.html#color-themes"><i class="fa fa-check"></i><b>3.2.3</b> Color Themes</a></li>
+<li class="chapter" data-level="1.7.1" data-path="Rintro.html"><a href="Rintro.html#vig"><i class="fa fa-check"></i><b>1.7.1</b> Get Help</a></li>
+<li class="chapter" data-level="1.7.2" data-path="Rintro.html"><a href="Rintro.html#comments"><i class="fa fa-check"></i><b>1.7.2</b> Comments</a></li>
+<li class="chapter" data-level="1.7.3" data-path="Rintro.html"><a href="Rintro.html#color-themes"><i class="fa fa-check"></i><b>1.7.3</b> Color Themes</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -233,7 +141,7 @@ div.csl-indent {
 </div>
 <div id="preface" class="section level1 unnumbered hasAnchor">
 <h1>Preface<a href="index.html#preface" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>Here find a brief introduction, in written and video format, to one of the primary languages of data science: R. This material presents some basic analyses, focusing on using my <em>lessR</em> package, part of the R ecosystem.</p>
+<p>Here find a brief introduction, in written and video format, to one of the primary languages of data science: R. This material presents some basic analyses, focusing on using my <code>lessR</code> package, part of the R ecosystem.</p>
 <p>The written material shows you how to use R. The videos show R running the instructions presented in the written material.
 As you read through this material you will encounter some numbered lines of R instructions labeled <strong>Example</strong>, which appear as follows.</p>
 <div class="example">
@@ -306,20 +214,6 @@ gitbook.start({
 });
 </script>
 
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-  (function () {
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    var src = "true";
-    if (src === "" || src === "true") src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/latest.js?config=TeX-MML-AM_CHTML";
-    if (location.protocol !== "file:")
-      if (/^https?:/.test(src))
-        src = src.replace(/^https?:/, '');
-    script.src = src;
-    document.getElementsByTagName("head")[0].appendChild(script);
-  })();
-</script>
 </body>
 
 </html>
