--- a/Rintro.html
+++ b/Rintro.html
@@ -22,7 +22,7 @@
 
 
 
-<meta name="date" content="2023-01-11" />
+<meta name="date" content="2023-01-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -333,8 +333,15 @@ I have made using R for basic data analysis much more straightforward with my 45
 </div>
 <div id="start" class="section level2 hasAnchor" number="1.2">
 <h2><span class="header-section-number">1.2</span> Getting Started<a href="Rintro.html#start" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p><span class="newthought">Download and install R on your computer, or run via a web browser in the cloud.</span> The choice is yours. R works the same regardless of the platform on which it is run. Of course, running in the cloud requires an active Internet connection. With your data and your data processing app on your own computer you maintain a level of independence and security not available with cloud processing, but you do need a computer with more than just a web browser.</p>
-<p>Read one of the two following sections: <em>Do R in the Cloud</em> or <em>Do R on Your Computer</em>. No need to read both sections unless you are curious about exploring both venues. After accessing R, regardless of your chosen approach, the next step is to <a href="Rintro.html#lessR"><em>download and access <code>lessR</code></em></a>.</p>
+<p><span class="newthought">Download and install R on your computer, or run via a web browser in the cloud.</span> The choice is yours. R works the same regardless of the platform on which it is run. Of course, running in the cloud requires an active Internet connection. With your data and your data processing app on your own computer you maintain a level of independence and security not available with cloud processing, but to run R locally you do need a computer with more than just a web browser.</p>
+<p>Read one of the two following sections:</p>
+<ol style="list-style-type: decimal">
+<li>Do R in the <em>Cloud</em><br />
+    or<br />
+</li>
+<li>Do R on Your <em>Computer</em>.</li>
+</ol>
+<p>No need to read both sections unless you are curious about exploring both venues. If you wish, you can also use both approaches, switching back and forth, but usually no need to do, unless you carry around an iPad or related when away from home and use your computer when at home. After accessing R, regardless of your chosen approach, the next step is to <a href="Rintro.html#lessR"><em>download and access <code>lessR</code></em></a>.</p>
 <div id="do-r-in-the-cloud" class="section level3 hasAnchor" number="1.2.1">
 <h3><span class="header-section-number">1.2.1</span> Do R in the Cloud<a href="Rintro.html#do-r-in-the-cloud" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p><span class="newthought">From the cloud, access R with a web browser on any computing device</span>, such as a Chromebook or an iPad.</p>
