--- a/references.html
+++ b/references.html
@@ -22,14 +22,14 @@
 
 
 
-<meta name="date" content="2023-01-02" />
+<meta name="date" content="2023-01-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="Rintro.html"/>
+<link rel="prev" href="more-stuff.html"/>
 
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -158,39 +158,50 @@ div.csl-indent {
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Preface</a></li>
-<li class="chapter" data-level="1" data-path="Rintro.html"><a href="Rintro.html"><i class="fa fa-check"></i><b>1</b> Data Analysis with R</a>
+<li class="chapter" data-level="1" data-path="Rintro.html"><a href="Rintro.html"><i class="fa fa-check"></i><b>1</b> Introduction to R</a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="Rintro.html"><a href="Rintro.html#overview"><i class="fa fa-check"></i><b>1.1</b> Overview</a>
 <ul>
 <li class="chapter" data-level="1.1.1" data-path="Rintro.html"><a href="Rintro.html#RvsExcel"><i class="fa fa-check"></i><b>1.1.1</b> R vs. Excel</a></li>
-<li class="chapter" data-level="1.1.2" data-path="Rintro.html"><a href="Rintro.html#lessr-enhancements"><i class="fa fa-check"></i><b>1.1.2</b> <strong>lessR</strong> Enhancements</a></li>
+<li class="chapter" data-level="1.1.2" data-path="Rintro.html"><a href="Rintro.html#lessr-enhancements"><i class="fa fa-check"></i><b>1.1.2</b> <code>lessR</code> Enhancements</a></li>
 </ul></li>
 <li class="chapter" data-level="1.2" data-path="Rintro.html"><a href="Rintro.html#start"><i class="fa fa-check"></i><b>1.2</b> Getting Started</a>
 <ul>
 <li class="chapter" data-level="1.2.1" data-path="Rintro.html"><a href="Rintro.html#do-r-in-the-cloud"><i class="fa fa-check"></i><b>1.2.1</b> Do R in the Cloud</a></li>
 <li class="chapter" data-level="1.2.2" data-path="Rintro.html"><a href="Rintro.html#do-r-on-your-computer"><i class="fa fa-check"></i><b>1.2.2</b> Do R on Your Computer</a></li>
-<li class="chapter" data-level="1.2.3" data-path="Rintro.html"><a href="Rintro.html#lessR"><i class="fa fa-check"></i><b>1.2.3</b> Download and Access <strong>lessR</strong></a></li>
+<li class="chapter" data-level="1.2.3" data-path="Rintro.html"><a href="Rintro.html#lessR"><i class="fa fa-check"></i><b>1.2.3</b> Download and Access <code>lessR</code></a></li>
 </ul></li>
-<li class="chapter" data-level="1.3" data-path="Rintro.html"><a href="Rintro.html#data"><i class="fa fa-check"></i><b>1.3</b> Data</a>
-<ul>
-<li class="chapter" data-level="1.3.1" data-path="Rintro.html"><a href="Rintro.html#dt"><i class="fa fa-check"></i><b>1.3.1</b> Data Table</a></li>
-<li class="chapter" data-level="1.3.2" data-path="Rintro.html"><a href="Rintro.html#read"><i class="fa fa-check"></i><b>1.3.2</b> Read the Data into R</a></li>
-<li class="chapter" data-level="1.3.3" data-path="Rintro.html"><a href="Rintro.html#display-the-data"><i class="fa fa-check"></i><b>1.3.3</b> Display the Data</a></li>
-<li class="chapter" data-level="1.3.4" data-path="Rintro.html"><a href="Rintro.html#two-types-of-variables"><i class="fa fa-check"></i><b>1.3.4</b> Two Types of Variables</a></li>
 </ul></li>
-<li class="chapter" data-level="1.4" data-path="Rintro.html"><a href="Rintro.html#count"><i class="fa fa-check"></i><b>1.4</b> Visualize the Data</a>
+<li class="chapter" data-level="2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html"><i class="fa fa-check"></i><b>2</b> Data Analysis with R</a>
 <ul>
-<li class="chapter" data-level="1.4.1" data-path="Rintro.html"><a href="Rintro.html#bar-chart-and-pie-chart"><i class="fa fa-check"></i><b>1.4.1</b> Bar Chart and Pie Chart</a></li>
-<li class="chapter" data-level="1.4.2" data-path="Rintro.html"><a href="Rintro.html#hist"><i class="fa fa-check"></i><b>1.4.2</b> Histogram</a></li>
-<li class="chapter" data-level="1.4.3" data-path="Rintro.html"><a href="Rintro.html#params"><i class="fa fa-check"></i><b>1.4.3</b> Parameter Values</a></li>
+<li class="chapter" data-level="2.1" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#data"><i class="fa fa-check"></i><b>2.1</b> Data</a>
+<ul>
+<li class="chapter" data-level="2.1.1" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#dt"><i class="fa fa-check"></i><b>2.1.1</b> Data Table</a></li>
+<li class="chapter" data-level="2.1.2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#read"><i class="fa fa-check"></i><b>2.1.2</b> Read the Data into R</a></li>
+<li class="chapter" data-level="2.1.3" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#display-the-data"><i class="fa fa-check"></i><b>2.1.3</b> Display the Data</a></li>
+<li class="chapter" data-level="2.1.4" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#two-types-of-variables"><i class="fa fa-check"></i><b>2.1.4</b> Two Types of Variables</a></li>
 </ul></li>
-<li class="chapter" data-level="1.5" data-path="Rintro.html"><a href="Rintro.html#summary"><i class="fa fa-check"></i><b>1.5</b> Summary</a></li>
-<li class="chapter" data-level="1.6" data-path="Rintro.html"><a href="Rintro.html#misc"><i class="fa fa-check"></i><b>1.6</b> Misc</a>
+<li class="chapter" data-level="2.2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#count"><i class="fa fa-check"></i><b>2.2</b> Visualize the Data</a>
 <ul>
-<li class="chapter" data-level="1.6.1" data-path="Rintro.html"><a href="Rintro.html#report-generation"><i class="fa fa-check"></i><b>1.6.1</b> Report Generation</a></li>
-<li class="chapter" data-level="1.6.2" data-path="Rintro.html"><a href="Rintro.html#vig"><i class="fa fa-check"></i><b>1.6.2</b> Get Help</a></li>
-<li class="chapter" data-level="1.6.3" data-path="Rintro.html"><a href="Rintro.html#comments"><i class="fa fa-check"></i><b>1.6.3</b> Comments</a></li>
-<li class="chapter" data-level="1.6.4" data-path="Rintro.html"><a href="Rintro.html#optional-color-themes"><i class="fa fa-check"></i><b>1.6.4</b> Optional: Color Themes</a></li>
+<li class="chapter" data-level="2.2.1" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#bar-chart-and-pie-chart"><i class="fa fa-check"></i><b>2.2.1</b> Bar Chart and Pie Chart</a></li>
+<li class="chapter" data-level="2.2.2" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#hist"><i class="fa fa-check"></i><b>2.2.2</b> Histogram</a></li>
+<li class="chapter" data-level="2.2.3" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#params"><i class="fa fa-check"></i><b>2.2.3</b> Parameter Values</a></li>
+</ul></li>
+<li class="chapter" data-level="2.3" data-path="data-analysis-with-r.html"><a href="data-analysis-with-r.html#summary"><i class="fa fa-check"></i><b>2.3</b> Summary</a></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="more-stuff.html"><a href="more-stuff.html"><i class="fa fa-check"></i><b>3</b> More Stuff</a>
+<ul>
+<li class="chapter" data-level="3.1" data-path="more-stuff.html"><a href="more-stuff.html#report-generation"><i class="fa fa-check"></i><b>3.1</b> Report Generation</a>
+<ul>
+<li class="chapter" data-level="3.1.1" data-path="more-stuff.html"><a href="more-stuff.html#figures"><i class="fa fa-check"></i><b>3.1.1</b> Copy and Paste</a></li>
+<li class="chapter" data-level="3.1.2" data-path="more-stuff.html"><a href="more-stuff.html#compile-a-report"><i class="fa fa-check"></i><b>3.1.2</b> Compile a Report</a></li>
+<li class="chapter" data-level="3.1.3" data-path="more-stuff.html"><a href="more-stuff.html#report-from-r-markdown"><i class="fa fa-check"></i><b>3.1.3</b> Report from R Markdown</a></li>
+</ul></li>
+<li class="chapter" data-level="3.2" data-path="more-stuff.html"><a href="more-stuff.html#miscellaneous"><i class="fa fa-check"></i><b>3.2</b> Miscellaneous</a>
+<ul>
+<li class="chapter" data-level="3.2.1" data-path="more-stuff.html"><a href="more-stuff.html#vig"><i class="fa fa-check"></i><b>3.2.1</b> Get Help</a></li>
+<li class="chapter" data-level="3.2.2" data-path="more-stuff.html"><a href="more-stuff.html#comments"><i class="fa fa-check"></i><b>3.2.2</b> Comments</a></li>
+<li class="chapter" data-level="3.2.3" data-path="more-stuff.html"><a href="more-stuff.html#color-themes"><i class="fa fa-check"></i><b>3.2.3</b> Color Themes</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -224,7 +235,7 @@ Gerbing, David. 2019. <span>“Easy, Engaging Bar Charts from Simple to Sophisti
 ———. 2020. <em>R Visualizations: Derive Meaning from Data</em>. CRC Press.
 </div>
 <div class="csl-entry">
-Gerbing, David W. 2021. <span>“Enhancement of the Command-Line Environment for Use in the Introductory Statistics Course and Beyond.”</span> <em>Journal of Statistics and Data Science Education</em> 29 (3): 251–66. <a href="https://doi.org/10.1080/26939169.2021.1999871">https://doi.org/10.1080/26939169.2021.1999871</a>.
+———. 2021. <span>“Enhancement of the Command-Line Environment for Use in the Introductory Statistics Course and Beyond.”</span> <em>Journal of Statistics and Data Science Education</em> 29 (3): 251–66. <a href="https://doi.org/10.1080/26939169.2021.1999871">https://doi.org/10.1080/26939169.2021.1999871</a>.
 </div>
 <div class="csl-entry">
 R Core Team. 2022. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="https://www.R-project.org/">https://www.R-project.org/</a>.
@@ -242,7 +253,7 @@ R Core Team. 2022. <em>R: A Language and Environment for Statistical Computing</
           </div>
         </div>
       </div>
-<a href="Rintro.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="more-stuff.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
