--- a/Rintro.html
+++ b/Rintro.html
@@ -22,7 +22,7 @@
 
 
 
-<meta name="date" content="2023-01-13" />
+<meta name="date" content="2023-01-14" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -341,7 +341,7 @@ I have made using R for basic data analysis much more straightforward with my 45
 </li>
 <li>Do R on Your <em>Computer</em>.</li>
 </ol>
-<p>No need to read both sections unless you are curious about exploring both venues. If you wish, you can also use both approaches, switching back and forth, but usually no need to do, unless you carry around an iPad or related when away from home and use your computer when at home. After accessing R, regardless of your chosen approach, the next step is to <a href="Rintro.html#lessR"><em>download and access <code>lessR</code></em></a>.</p>
+<p>No need to read both sections unless you are curious about exploring both venues. If you wish, you can also use both approaches, switching back and forth, but usually no need to do, unless you carry around an iPad or related when away from home and use your computer when at home. After accessing R on either your computer or the cloud, the next step is to <a href="Rintro.html#lessR"><em>download and access <code>lessR</code></em></a>.</p>
 <div id="do-r-in-the-cloud" class="section level3 hasAnchor" number="1.2.1">
 <h3><span class="header-section-number">1.2.1</span> Do R in the Cloud<a href="Rintro.html#do-r-in-the-cloud" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p><span class="newthought">From the cloud, access R with a web browser on any computing device</span>, such as a Chromebook or an iPad.</p>
@@ -350,8 +350,8 @@ I have made using R for basic data analysis much more straightforward with my 45
 <blockquote>
 <p><em>The cloud</em>: One or more computer servers, usually in locations unknown to the users, that run applications accessed via a standard web browser.</p>
 </blockquote>
-<p>An important company in the R ecosystem, Posit (formerly RStudio, Inc.), provides a free cloud account for running R within the app called RStudio at <code>posit.cloud</code>. Most people run R from within RStudio. In general, running R in the cloud is the same as running R on your computer. Just from examining the RStudio window you could not tell if you were running in the cloud or on your computer except that the listed file directory under the Files tab begins with Cloud.</p>
-<p>A free Posit account is limited to 25 free hours per month. This time limit is not just the time the computer requires to perform the data analysis computations but also includes the time that a cloud project is open. Wait to log into your account until you are ready to enter the commands needed to do an analysis, and then log out of your account when an analysis is complete. Restricting the time you access your cloud account to the time entering commands needed to do an analysis should allow data analysis assignments to be completed in a basic data analysis course within the time constraint. View your account status by clicking on the icon at the top-right with your initials.</p>
+<p>An important company in the R ecosystem, Posit (formerly RStudio, Inc.), provides a free, though limited, cloud account for running R within the app called RStudio at <code>posit.cloud</code>. Most people run R from within RStudio. In general, running R in the cloud is the same as running R on your computer. Just from examining the RStudio window you could not tell if you were running in the cloud or on your computer except that the listed file directory under the Files tab begins with Cloud.</p>
+<p>A free Posit account is limited in the sense that only 25 free hours are available per month. The good news is that 25 hours should be plenty of time to complete the assignments in the typical course that does basic data analysis on small to moderate size data sets. However, this time limit is not just the time the computer requires to perform the data analysis computations but also includes the time that a cloud project is open. Wait to log into your account until you are ready to enter the commands needed to do an analysis, and then log out of your account when an analysis is complete. View your account status by clicking on the icon at the top-right with your initials.</p>
 <p>Off-loading computer processing from your computer to the cloud, or even doing analysis without a standard computer, such as doing R analysis via a Chromebook or iPad, can save money. Typically not needed, but even paying a small amount for monthly access to R in the cloud can be much cheaper than buying a computer or upgrading to a more powerful computer. Of course, the strategy of off-loading computer processing and storage applies to not just running R, but to many types of data processing. Many companies now maintain and access data bases in the cloud. Many people store not just data files, but photographs, videos and other types of information in the cloud.</p>
 </div>
 <div id="instructions" class="section level4 hasAnchor" number="1.2.1.2">
@@ -379,7 +379,7 @@ Figure 1.2: Name your project.
 </div>
 <div id="upload-a-data-file-to-your-cloud-account" class="section level5 hasAnchor" number="1.2.1.2.2">
 <h5><span class="header-section-number">1.2.1.2.2</span> Upload a data file to your cloud account<a href="Rintro.html#upload-a-data-file-to-your-cloud-account" class="anchor-section" aria-label="Anchor link to header"></a></h5>
-<p>The home directory is in your cloud account, with no direct access to files on your computer. This directory location makes no difference if reading a file from the web. However, to access a data file that resides on your own computer, first upload the data file to your cloud account. To upload, go the right-bottom window pane of your RStudio session and select the <code>Files</code> tab at the top-left of the window pane. Then select the <code>Upload</code> tab.</p>
+<p>The home directory is in your cloud account, with no direct access to files on your computer. This directory location makes no difference if reading a file from the web. However, if you enter your function calls directly into the R console, to access a data file that resides on your own computer, first upload the data file to your cloud account. To upload, go the right-bottom window pane of your RStudio session and select the <code>Files</code> tab at the top-left of the window pane. Then select the <code>Upload</code> tab.</p>
 <div class="figure" style="text-align: center"><span style="display:block;" id="fig:upload"></span>
 <img src="images/CloudUpload.png" alt="Upload a data file to the cloud." width="50%" />
 <p class="caption">
