--- a/01-intro.html
+++ b/01-intro.html
@@ -217,9 +217,9 @@ div.csl-indent {
   </ul></li>
   <li><a href="#start" id="toc-start" class="nav-link" data-scroll-target="#start"><span class="toc-section-number">1.2</span>  Getting Started</a>
   <ul class="collapse">
-  <li><a href="#r-in-the-cloud" id="toc-r-in-the-cloud" class="nav-link" data-scroll-target="#r-in-the-cloud"><span class="toc-section-number">1.2.1</span>  R in the Cloud</a></li>
-  <li><a href="#r-on-your-computer" id="toc-r-on-your-computer" class="nav-link" data-scroll-target="#r-on-your-computer"><span class="toc-section-number">1.2.2</span>  R on Your Computer</a></li>
-  <li><a href="#lessR" id="toc-lessR" class="nav-link" data-scroll-target="#lessR"><span class="toc-section-number">1.2.3</span>  Download and Access <code>lessR</code></a></li>
+  <li><a href="#in-the-cloud" id="toc-in-the-cloud" class="nav-link" data-scroll-target="#in-the-cloud"><span class="toc-section-number">1.2.1</span>  In the Cloud</a></li>
+  <li><a href="#on-your-computer" id="toc-on-your-computer" class="nav-link" data-scroll-target="#on-your-computer"><span class="toc-section-number">1.2.2</span>  On Your Computer</a></li>
+  <li><a href="#lessR" id="toc-lessR" class="nav-link" data-scroll-target="#lessR"><span class="toc-section-number">1.2.3</span>  Access <code>lessR</code></a></li>
   </ul></li>
   </ul>
 </nav>
@@ -389,14 +389,14 @@ No programming involved
 <p><span class="newthought">Download and install R on your computer, or run via a web browser in the cloud.</span> The choice is yours. R works the same regardless of the platform on which it is run. Of course, running in the cloud requires an active Internet connection. With your data and your data processing app on your own computer you maintain a level of independence and security not available with cloud processing, but to run R locally you do need a computing device with more than just a web browser.</p>
 <p>Read one of the two following sections:</p>
 <ol type="1">
-<li>R in the <em>Cloud</em><br>
+<li>In the <em>Cloud</em><br>
 &nbsp;&nbsp;&nbsp;&nbsp;or<br>
 </li>
-<li>R on Your <em>Computer</em></li>
+<li>On Your <em>Computer</em></li>
 </ol>
 <p>No need to read both sections unless you are curious about exploring both venues. If you wish, you can also use both approaches, switching back and forth, but usually no need to do, unless you carry around an iPad or related when away from home and use your computer when at home. After accessing R on either your computer or the cloud, the next step is to <a href="#lessR"><em>download and access <code>lessR</code></em></a>.</p>
-<section id="r-in-the-cloud" class="level3" data-number="1.2.1">
-<h3 data-number="1.2.1" class="anchored" data-anchor-id="r-in-the-cloud"><span class="header-section-number">1.2.1</span> R in the Cloud</h3>
+<section id="in-the-cloud" class="level3" data-number="1.2.1">
+<h3 data-number="1.2.1" class="anchored" data-anchor-id="in-the-cloud"><span class="header-section-number">1.2.1</span> In the Cloud</h3>
 <p><span class="newthought">From the cloud, access R with a web browser on any computing device</span>, such as a Chromebook or an iPad.</p>
 <section id="the-cloud" class="level4" data-number="1.2.1.1">
 <h4 data-number="1.2.1.1" class="anchored" data-anchor-id="the-cloud"><span class="header-section-number">1.2.1.1</span> The Cloud</h4>
@@ -412,8 +412,8 @@ No programming involved
 <p>Access an R cloud account at:</p>
 <pre><code>https://posit.cloud/</code></pre>
 <p>Create a free account at the prompt, and you are ready to go.</p>
-<section id="create-a-new-project" class="level5" data-number="1.2.1.2.1">
-<h5 data-number="1.2.1.2.1" class="anchored" data-anchor-id="create-a-new-project"><span class="header-section-number">1.2.1.2.1</span> Create a new project</h5>
+<section id="new-project" class="level5" data-number="1.2.1.2.1">
+<h5 data-number="1.2.1.2.1" class="anchored" data-anchor-id="new-project"><span class="header-section-number">1.2.1.2.1</span> New project</h5>
 <p>Organize your analyses by project, maybe one project for all your homework assignments. Each project corresponds to a different data analysis project. To get started, select the <code>New Project</code> drop-down menu, then <code>New RStudio Project</code>.</p>
 <div class="cell" data-layout-align="center" data-fig.asp="0.7">
 <div class="cell-output-display">
@@ -470,8 +470,8 @@ No programming involved
 </section>
 </section>
 </section>
-<section id="r-on-your-computer" class="level3" data-number="1.2.2">
-<h3 data-number="1.2.2" class="anchored" data-anchor-id="r-on-your-computer"><span class="header-section-number">1.2.2</span> R on Your Computer</h3>
+<section id="on-your-computer" class="level3" data-number="1.2.2">
+<h3 data-number="1.2.2" class="anchored" data-anchor-id="on-your-computer"><span class="header-section-number">1.2.2</span> On Your Computer</h3>
 <p>Running R on your computer, of course, requires to first download the R app to your computer. Although optional, most people also download a second app called RStudio from which to run R. Get both free apps at <a href="https://posit.co/download/rstudio-desktop/" target="_blank" rel="noopener">Download Data Science Apps</a>.</p>
 <p><a href="https://media.pdx.edu/media/t/1_dlx9dpo8" target="_blank" rel="noopener noreferrer">video: download R and RStudio</a> [(3:44)]</p>
 <section id="getR" class="level4" data-number="1.2.2.1">
@@ -484,7 +484,7 @@ No programming involved
 <p>Once downloaded, the installation proceeds as with any app. Accept the given defaults for each step of the process. When installed, run the R app as you would any other application, such as double-clicking on the application’s icon in your file system display. When opened, R displays a window called the <em>console</em>. Enter instructions into the R console command line, where R presents the <code>&gt;</code> prompt.</p>
 </section>
 <section id="getRStudio" class="level4" data-number="1.2.2.2">
-<h4 data-number="1.2.2.2" class="anchored" data-anchor-id="getRStudio"><span class="header-section-number">1.2.2.2</span> Download and Run RStudio</h4>
+<h4 data-number="1.2.2.2" class="anchored" data-anchor-id="getRStudio"><span class="header-section-number">1.2.2.2</span> RStudio</h4>
 <p><span class="newthought">Usually, run R from within an app called RStudio</span> because of the additional features that RStudio provides. You can <a href="https://posit.co/download/rstudio-desktop/" target="_blank" rel="noopener">download</a> now, later, or never, but there are some advantages to running R from within RStudio.</p>
 <p>From RStudio, you are running R at the standard R console, but within the RStudio environment. As shown in the following figure, RStudio divides the main window into several window panes, all resizable to customize for a specific analysis. The primary window pane is the standard R console, the same console available from running R by itself. A second window pane is where RStudio directs the data visualizations and can also display other information such as your file directory. A third window pane displays your data or your history of entered R instructions.</p>
 <p>A potential fourth window pane in the top-left corner provides for files of R code, ready for analysis. Request this fourth window within RStudio by creating a new R script file as shown in Figure <a href="#fig-RStudio">Figure&nbsp;<span>1.3</span></a>.</p>
@@ -518,7 +518,7 @@ No programming involved
 </section>
 </section>
 <section id="lessR" class="level3" data-number="1.2.3">
-<h3 data-number="1.2.3" class="anchored" data-anchor-id="lessR"><span class="header-section-number">1.2.3</span> Download and Access <code>lessR</code></h3>
+<h3 data-number="1.2.3" class="anchored" data-anchor-id="lessR"><span class="header-section-number">1.2.3</span> Access <code>lessR</code></h3>
 <p><span class="newthought">To do a specific analysis,</span> enter into the console, after the <code>&gt;</code> prompt, the name of the function designed to accomplish that analysis. Each function has a name, such as <code>Histogram()</code> to display a histogram. To call a function for data analysis, in response to the R command prompt, <code>&gt;</code>, enter the function name, a left parenthesis, a value such as the variable name for which to do the analysis, and then a matching right parenthesis.</p>
 <p>Running R, within RStudio or by itself, on either your computer or in the cloud, one time only, download the <code>lessR</code> package of functions (and associated dependent packages) from the worldwide network of R servers onto your computer. In response to the R console command prompt, <code>&gt;</code>, enter the following instruction (function call) into the R console, either running R by itself or within RStudio. After entering the instruction, press Enter/Return.</p>
 <p><a href="https://media.pdx.edu/media/t/1_as8dy1xh" target="_blank" rel="noopener noreferrer">video: install lessR</a> [1:28]</p>
